# janus-rtpforward-plugin

./: .gitignore  COPYING  Makefile.am  README.md  bootstrap  configure.ac  janus_rtpforward.c
demo/: .gitignore  README.md  importmap.json  index.html  jspm.json  package-lock.json  package.json
demo/src/: index.js  rtpforward-plugin.js
